--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="author" content="Arya Joshi">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
     <meta name="description" content="Arya Joshi professional website">
-    <title>Your name</title>
-    <title>Document</title>
+    <title>Arya Joshi</title>
+    <title>Personal Website</title>
 </head>
 <body style="font-family: Arial;">
     <header style="color:blue; background:lightblue">
