--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Arya Joshi">
+    <meta name="author" content="Arya joshi">
     <meta name="keywords" content="Carnegie Mellon University, Information Systems">
-    <meta name="description" content="Arya Joshi professional website">
+    <meta name="description" content="Arya joshi professional website">
+    <link rel="stylesheet" href="./static/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900&display=swap" rel="stylesheet">
     <title>Arya Joshi</title>
-    <title>Personal Website</title>
 </head>
-<body style="font-family: Arial;">
-    <header style="color:blue; background:lightblue">
-        <h1>Arya Joshi</h1>
-       
+<body>
+    <header>
+        <h1 id="webname">Arya Joshi</h1>
         <nav>
-            <a href="index.html">Home</a> 
-            <a href="views/cv.html">CV</a>
-            <a href="views/contact.html">Contact Me</a>
-            <a href="views/fun.html">For Fun</a>
+            <a href="../index.html" class = "navigation">Home</a>
+            <a href="cv.html" class = "navigation">CV</a>
+            <a href="contact.html" class = "navigation">Contact Me</a>
+            <a href="fun.html" class = "navigation">For Fun</a>
         </nav>
     </header>
-    <div class = "main"> 
-        <h2> Hi, my name is Arya! </h2>
-        <img src = "static/face.jpg" alt = "image of arya">
-        <p id = "intro"> My name is Arya, and I am an Information Systems Major at Carnegie Mellon University. 
+    <div class="main">
+        <h2>Hi, my name is Arya </h2>
+        <img src="static/photo.png" alt="your full name profile image" width="350px">
+        <p id="intro">My name is Arya, and I am an Information Systems Major at Carnegie Mellon University. 
             I am constantly driven by my passion for technology, problem solving, and team building, which is why I decided to make my future focus on these elements. 
             Outside of academics, I enjoy playing and listening to music, as well as watching sports.
             This includes all genres, from classical to hip hop, UFC to basketball. 
              I also play the tabla, an instrument I have been learning since elementary school, and has allowed me to express myself in ways other fields cannot. I love learning new things about myself, and the world around me, whether this be through picking up new hobbies or just learning from class.
               This website showcases projects that I have worked on, my current interests, and what I look forward to. 
-              If there are any questions, or you want to reach out, don't hesitate to use the contact form! </p>
+              If there are any questions, or you want to reach out, don't hesitate to use the contact form!</p>
     </div>
-    <footer> Copyright Arya Joshi 2025</footer>
+    <footer>&copy; 2025 designed 🎨 and coded 👩🏻‍💻 by Arya</footer>
 </body>
 </html>
