--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header>
         <h1 id="webname">Arya Joshi</h1>
         <nav>
-            <a href="../index.html" class = "navigation">Home</a>
-            <a href="cv.html" class = "navigation">CV</a>
-            <a href="contact.html" class = "navigation">Contact Me</a>
-            <a href="fun.html" class = "navigation">For Fun</a>
+            <a href="index.html" class = "navigation">Home</a>
+            <a href="views/cv.html" class = "navigation">CV</a>
+            <a href="views/contact.html" class = "navigation">Contact Me</a>
+            <a href="views/fun.html" class = "navigation">For Fun</a>
         </nav>
     </header>
     <div class="main">
