--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900&display=swap" rel="stylesheet">
+   <script src="./static/script.js" defer></script>
     <title>Arya Joshi</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
         </nav>
     </header>
     <div class="main">
-        <h2>Hi, my name is Arya </h2>
+        <h2 id="greeting">Hi, my name is Arya </h2>
         <img src="static/photo.png" alt="your full name profile image" width="350px">
         <p id="intro">My name is Arya, and I am an Information Systems Major at Carnegie Mellon University. 
             I am constantly driven by my passion for technology, problem solving, and team building, which is why I decided to make my future focus on these elements. 
