--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900&display=swap" rel="stylesheet">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    <script src="./static/script.js" defer></script>
+   <a href="template.html">Extra Credit Lab (animation is the fade in)</a>
     <title>Arya Joshi</title>
 </head>
 <body onload="addYear()">
